--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "bolt-expo-nativewind",
     "slug": "bolt-expo-nativewind",
     "version": "1.0.0",
+    "sdkVersion": "52.0.33",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
@@ -16,9 +17,22 @@
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router"
+    ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "7ce3b7d6-a495-4bc0-9eb6-a386092a8864"
+      }
+    },
+    "android": {
+      "package": "com.pkkarn.boltexponativewind"
     }
   }
 }
